[package]
authors = ["sp3d"]
name = "ip-watcher"
version = "0.1.0"
description = "watch for changes to system IP addresses via the Linux netlink kernel interface"
[dependencies]
byteorder = "1"
futures = "0.1"
tokio = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
pnet_macros_support = "0.22"
pnetlink = { git = "https://github.com/polachok/pnetlink" }
