[package]
edition = "2018"
authors = ["sp3d"]
name = "ip-watcher"
version = "0.1.0"
description = "watch for changes to system IP addresses via the Linux netlink kernel interface"
[dependencies]
byteorder = "1.3"
futures = "0.3"
tokio = "0.2"
tokio-util = "0.2"
pnet_macros_support = "0.25"
#tokio-core = "0.2"
#pnetlink = { git = "https://github.com/polachok/pnetlink" }
pnetlink = { git = "https://github.com/sp3d/pnetlink" }
